Non-methods code cache overflow is not handled correctly

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b137

      In case non-methods code cache have no free space, a fallback to use non-profiled methods cache is enabled(see CodeCache::allocate). As result, no CompileBroker::handle_full_code_cache is called for non-methods cache and no respective warnings and jfr events are fired. Should be fixed to fire jfr event(without disabling compilation)

            Assignee:
            Tobias Hartmann
            Reporter:
            Dmitrij Pochepko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: