8064892: Non-methods code cache overflow is not handled correctly

Should keep track of requested code blob type for error reporting. Added additional debug output.

Reviewed-by: kvn, dpochepk